--- a/src/styles/components/_dropDown.scss
+++ b/src/styles/components/_dropDown.scss
@@ -1,10 +1,12 @@
 .dropbtn {
   background-color: #3498db;
   color: white;
-  padding: 16px;
+  padding: 8px;
   font-size: 16px;
   border: none;
   cursor: pointer;
+  border-radius: 5px;
+  margin-top: 12px;
 }
 
 .dropbtn:hover,
@@ -12,13 +14,7 @@
   background-color: #2980b9;
 }
 
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
 .dropdown-content {
-  display: none;
   position: absolute;
   background-color: #f1f1f1;
   min-width: 160px;
@@ -27,17 +23,20 @@
   z-index: 1;
 }
 
-.dropdown-content a {
+.dropdown-content div {
+  cursor: pointer;
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  border-bottom: 1px solid grey;
 }
 
-.dropdown a:hover {
-  background-color: #ddd;
+.dropdown-content div:last-child {
+  border: none;
 }
 
-.show {
-  display: block;
+.dropdown-content div:hover {
+  background-color: #3498db;
+  color: white;
 }
