--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -91,3 +91,41 @@
   display: flex;
   flex-direction: column;
 }
+
+.left {
+  text-align: left;
+}
+
+.group-header-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  margin: 0 16px;
+
+  h3 {
+    font-style: italic;
+    font-size: 20px;
+    margin-right: 20px;
+  }
+
+  @media (max-width: 400px) {
+    font-size: 16px;
+    margin-right: 8px;
+  }
+}
+
+.Back-link {
+  text-decoration: none;
+  margin: 20px;
+  display: inline-block;
+  background: grey;
+  color: white;
+  border: 1px solid grey;
+  border-radius: 24px;
+  padding: 4px 8px;
+
+  @media (max-width: 400px) {
+    font-size: 12px;
+  }
+}
