--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -7,10 +7,10 @@
 }
 
 .text-input--search {
-  border-radius: 10px;
-  margin: $m-size auto;
+  border-radius: 5px;
+  margin: $m-size 0;
   display: block;
-  max-width: 50rem;
+  max-width: 80rem;
 }
 
 .text-input--addMember {
