--- a/src/styles/components/_dropDown.scss
+++ b/src/styles/components/_dropDown.scss
@@ -1,5 +1,5 @@
 .dropbtn {
-  background-color: #3498db;
+  background-color: #e17055;
   color: white;
   padding: 8px;
   font-size: 16px;
@@ -7,25 +7,27 @@
   cursor: pointer;
   border-radius: 5px;
   margin-top: 12px;
+  width: 100%;
 }
 
 .dropbtn:hover,
 .dropbtn:focus {
-  background-color: #2980b9;
+  background-color: #e17055;
 }
 
 .dropdown-content {
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: #e17055;
   min-width: 160px;
   overflow: auto;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  width: 60%;
 }
 
 .dropdown-content div {
   cursor: pointer;
-  color: black;
+  color: white;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -37,6 +39,6 @@
 }
 
 .dropdown-content div:hover {
-  background-color: #3498db;
+  background-color: #fab1a0;
   color: white;
 }
