--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -118,11 +118,12 @@
 .Back-link {
   text-decoration: none;
   margin: 20px;
+  margin-left: 0;
   display: inline-block;
   background: grey;
   color: white;
   border: 1px solid grey;
-  border-radius: 24px;
+  border-radius: 18px;
   padding: 4px 8px;
 
   @media (max-width: 400px) {
