--- a/src/styles/components/_list.scss
+++ b/src/styles/components/_list.scss
@@ -77,7 +77,7 @@
 }
 
 .list-item__data {
-  margin: $s-size 0 0 0;
+  margin: 0;
   @media (min-width: $desktop-breakpoint) {
     margin: 0;
     padding-left: $s-size;
