--- a/src/styles/components/_list.scss
+++ b/src/styles/components/_list.scss
@@ -68,7 +68,7 @@
 }
 
 .list-item__data-members {
-  margin: $s-size 0 0 0;
+  margin: 0;
   color: #0073b1;
   @media (min-width: $desktop-breakpoint) {
     margin: 0;
